add background image to headre

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,8 @@
 .mainBody {
-  height: 40%;
+  height: 33%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-image: url("../images/pattern-bg.png");
 }
