--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,7 +1,8 @@
 .mainBody {
   height: 33%;
+
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 
   background-image: url("../images/pattern-bg.png");
