css resets for app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
+/* RESETS */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
 .App {
   position: fixed;
   width: 100%;
