--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -1,10 +1,17 @@
 .container {
-  width: 5rem;
-  height: 5rem;
+  /* min-width: 150px; */
+  width: 85%;
+  height: 20%;
+  /* min-height: 100px; */
   background-color: white;
-  position: absolute;
-  top: 13rem;
-  left: 22.5rem;
 
-  /* display: flex; */
+  position: fixed;
+  float: left;
+  left: 50%;
+  top: 50%;
+  /* margin-top: 8rem; */
+  transform: translate(-50%, -135%);
+
+  display: flex;
+  justify-content: center;
 }
