--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -1,17 +1,18 @@
 .container {
-  /* min-width: 150px; */
   width: 85%;
   height: 20%;
-  /* min-height: 100px; */
+
   background-color: white;
 
   position: fixed;
   float: left;
   left: 50%;
   top: 50%;
-  /* margin-top: 8rem; */
+
   transform: translate(-50%, -135%);
 
   display: flex;
   justify-content: center;
+
+  border-radius: 13px 13px 13px 13px;
 }
