--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -1,6 +1,6 @@
 .container {
-  width: 85%;
-  height: 20%;
+  width: 80%;
+  height: 150px;
 
   background-color: white;
 
@@ -11,7 +11,7 @@
 
   position: absolute;
 
-  width: 70%;
-  height: 150px;
-  transform: translate(22.5%, -50%);
+  /* width: 70%;
+  height: 150px; */
+  transform: translate(12.5%, -50%);
 }
